# docs/swagger.json
@@ -1,34 +1,36 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the documentation website for all Arravo hackathons",
-        "title": "Hackathons API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "email": "appdev@arravo.co"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:5000",
-    "basePath": "/api",
     "paths": {
-        "/participants": {
-            "put": {
-                "description": "Update participant's information",
+        "/api/auth/login": {
+            "post": {
+                "description": "Log a user in",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Participants"
+                    "Auth"
                 ],
-                "summary": "Update participant's information",
-                "responses": {}
-            },
+                "summary": "Log a user in",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/routes.BasicLoginSuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/routes.BasicLoginFailureResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/participants": {
             "post": {
                 "description": "Register new participant",
                 "produces": [
@@ -52,6 +54,19 @@
                         }
                     }
                 }
+            }
+        },
+        "/participants": {
+            "put": {
+                "description": "Update participant's information",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Participants"
+                ],
+                "summary": "Update participant's information",
+                "responses": {}
             }
         }
     },
@@ -81,6 +96,39 @@
                     "type": "string"
                 },
                 "state": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.BasicLoginFailureResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.BasicLoginSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/routes.BasicLoginSuccessResponseData"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.BasicLoginSuccessResponseData": {
+            "type": "object",
+            "properties": {
+                "access_token": {
                     "type": "string"
                 }
             }
